Prevent word causing overflow

--- a/src/public/scaffolding/style.css
+++ b/src/public/scaffolding/style.css
@@ -4,6 +4,7 @@
 html {
 	-webkit-text-size-adjust: 100%;
 	overflow-x: hidden;
+    word-break: break-word;
 }
 
 *:focus {
